Cleanup + set body max height to prevent shift

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer base {
     body {
         margin: 0;
-        min-height: 100vh;
+        max-height: 100vh;
         font-family: 'Cutive Mono', monospace;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
